Added LilyTrace addon, calibrated text input, added extension api, fixes and code cleanup.

--- a/themes/material-lily.css
+++ b/themes/material-lily.css
@@ -24,10 +24,9 @@
 .lily-editor {
     cursor: text;
     color: black;
+    font-family: cons, Consolas, monospace;
     background-color: white;
 }
 
 .lily-editor-caret {
-    color: black;
-    font-size: 18px;
 }
