--- a/themes/material-lily.css
+++ b/themes/material-lily.css
@@ -8,11 +8,14 @@
     height: 300px;
 
     font-size: 16px;
-    font-family: cons, Consolas, monospace;
+    font-family: cons, monospace;
     border: 1px dashed gray;
 }
 
 .lily-line-numbers {
+    font-size: 16px;
+    font-family: cons, monospace;
+
     border-right: 1px solid gray;
     background-color: white;
 }
@@ -24,7 +27,8 @@
 .lily-editor {
     cursor: text;
     color: black;
-    font-family: cons, Consolas, monospace;
+    font-size: 16px;
+    font-family: cons, monospace;
     background-color: white;
 }
 
