--- a/src/lily.css
+++ b/src/lily.css
@@ -36,7 +36,7 @@
 }
 
 .lily-editor {
-    position: relative;
+    position: absolute;
     min-width: 100%;
     min-height: 100%;
     white-space: pre;
